Added maven compiler plugin.